syntax = "proto3";

package com.sokima.reactive.grpc.bookstore.proto;

import "com/sokima/reactive/grpc/bookstore/proto/extra-types.proto";

option java_multiple_files = true;
option java_package = "com.sokima.reactive.grpc.bookstore.proto";

message GetBookRequest {
  oneof SearchBookOption {
    PartialBookMetadata partialBookMetadata = 1;
    FullBookMetadata fullBookMetadata = 2;
    Checksum bookChecksum = 3;
  }
}

message GetBookResponse {
  Checksum checksum = 1;
  string title = 2;
  string author = 3;
  string edition = 4;
  string description = 5;
  bool isAvailable = 6;
}

service GetBookUseCase {
  rpc getBooks(GetBookRequest) returns (stream GetBookResponse);
}
